--- a/style.css
+++ b/style.css
@@ -4,5 +4,7 @@
     font-style: italic;
     font-weight: 500;
     border: 1px 1px solid black;
-    border-radius: 20px;
+    border-radius: 8px;
+    padding: 5px 5px;
+    width: 100%;
 }
